# protobuf_cpp

./: .gitignore  CMakeLists.txt  app  build.sh  cleanup.sh  output  proto-compile.sh
proto/: lm.helloworld.proto  test.gender.proto  tutorial.addressbook.proto
src/: main.cpp
src/proto/: lm.helloworld.pb.cc  lm.helloworld.pb.h  tutorial.addressbook.pb.cc  tutorial.addressbook.pb.h
